minipar_full/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa_minipar
Rule 1     programa_minipar -> bloco_stmt
Rule 2     bloco_stmt -> bloco_SEQ
Rule 3     bloco_stmt -> bloco_PAR
Rule 4     bloco_SEQ -> SEQ LBRACE stmts RBRACE
Rule 5     bloco_PAR -> PAR LBRACE stmts RBRACE
Rule 6     stmts -> stmt
Rule 7     stmts -> stmt stmts
Rule 8     tipo_var -> BOOL
Rule 9     tipo_var -> INT
Rule 10    tipo_var -> FLOAT_TYPE
Rule 11    tipo_var -> STRING_TYPE
Rule 12    tipo_var -> C_CHANNEL
Rule 13    tipo_var -> LIST LT tipo_var GT
Rule 14    declaracao -> tipo_var ID ASSIGN expr
Rule 15    declaracao -> C_CHANNEL ASSIGN ID STRING NUM SEMICOLON
Rule 16    atribuicao -> ID ASSIGN expr
Rule 17    stmt -> declaracao SEMICOLON
Rule 18    stmt -> atribuicao SEMICOLON
Rule 19    stmt -> if_stmt
Rule 20    stmt -> for_stmt
Rule 21    stmt -> while_stmt
Rule 22    stmt -> def_funcao
Rule 23    stmt -> input SEMICOLON
Rule 24    stmt -> output SEMICOLON
Rule 25    stmt -> chamada_funcao SEMICOLON
Rule 26    stmt -> receive_stmt
Rule 27    stmt -> send_stmt
Rule 28    stmt -> RETURN expr SEMICOLON
Rule 29    stmt -> COMMENT
Rule 30    for_stmt -> FOR LPAREN ID IN expr RPAREN LBRACE stmts RBRACE
Rule 31    while_stmt -> WHILE LPAREN expr RPAREN LBRACE stmts RBRACE
Rule 32    input -> INPUT LPAREN args RPAREN
Rule 33    output -> OUTPUT LPAREN args RPAREN
Rule 34    receive_stmt -> ID DOT RECEIVE COLON expr SEMICOLON
Rule 35    send_stmt -> ID DOT SEND COLON expr SEMICOLON
Rule 36    params -> ID COMMA params
Rule 37    params -> ID
Rule 38    params -> <empty>
Rule 39    def_funcao -> DEF ID LPAREN params RPAREN LBRACE stmts RBRACE
Rule 40    expr -> INPUT LPAREN args RPAREN
Rule 41    expr -> OUTPUT LPAREN args RPAREN
Rule 42    chamada_funcao -> ID LPAREN args RPAREN
Rule 43    args -> expr_list
Rule 44    args -> <empty>
Rule 45    expr -> chamada_funcao
Rule 46    expr -> expr_binop
Rule 47    expr -> expr_comparacao
Rule 48    expr -> expr_lista
Rule 49    expr -> expr_simples
Rule 50    expr_binop -> expr PLUS expr
Rule 51    expr_binop -> expr MINUS expr
Rule 52    expr_binop -> expr MULT expr
Rule 53    expr_binop -> expr DIV expr
Rule 54    expr_comparacao -> expr LT expr
Rule 55    expr_comparacao -> expr LE expr
Rule 56    expr_comparacao -> expr GT expr
Rule 57    expr_comparacao -> expr GE expr
Rule 58    expr_comparacao -> expr EQ expr
Rule 59    expr_comparacao -> expr NE expr
Rule 60    expr_lista -> LBRACKET expr_list RBRACKET
Rule 61    expr_list -> expr
Rule 62    expr_list -> expr COMMA expr_list
Rule 63    expr_simples -> ID
Rule 64    expr_simples -> NUM
Rule 65    expr_simples -> FLOAT
Rule 66    expr_simples -> STRING
Rule 67    expr_simples -> TRUE
Rule 68    expr_simples -> FALSE
Rule 69    expr_simples -> ID DOT ID
Rule 70    if_stmt -> IF LPAREN expr RPAREN LBRACE stmts RBRACE
Rule 71    if_stmt -> IF LPAREN expr RPAREN LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE

Terminals, with rules where they appear

ASSIGN               : 14 15 16
BOOL                 : 8
COLON                : 34 35
COMMA                : 36 62
COMMENT              : 29
C_CHANNEL            : 12 15
DEF                  : 39
DIV                  : 53
DOT                  : 34 35 69
ELSE                 : 71
EQ                   : 58
FALSE                : 68
FLOAT                : 65
FLOAT_TYPE           : 10
FOR                  : 30
GE                   : 57
GT                   : 13 56
ID                   : 14 15 16 30 34 35 36 37 39 42 63 69 69
IF                   : 70 71
IN                   : 30
INPUT                : 32 40
INT                  : 9
LBRACE               : 4 5 30 31 39 70 71 71
LBRACKET             : 60
LE                   : 55
LIST                 : 13
LPAREN               : 30 31 32 33 39 40 41 42 70 71
LT                   : 13 54
MINUS                : 51
MULT                 : 52
NE                   : 59
NUM                  : 15 64
OUTPUT               : 33 41
PAR                  : 5
PLUS                 : 50
RBRACE               : 4 5 30 31 39 70 71 71
RBRACKET             : 60
RECEIVE              : 34
RETURN               : 28
RPAREN               : 30 31 32 33 39 40 41 42 70 71
SEMICOLON            : 15 17 18 23 24 25 28 34 35
SEND                 : 35
SEQ                  : 4
STRING               : 15 66
STRING_TYPE          : 11
TRUE                 : 67
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

args                 : 32 33 40 41 42
atribuicao           : 18
bloco_PAR            : 3
bloco_SEQ            : 2
bloco_stmt           : 1
chamada_funcao       : 25 45
declaracao           : 17
def_funcao           : 22
expr                 : 14 16 28 30 31 34 35 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 61 62 70 71
expr_binop           : 46
expr_comparacao      : 47
expr_list            : 43 60 62
expr_lista           : 48
expr_simples         : 49
for_stmt             : 20
if_stmt              : 19
input                : 23
output               : 24
params               : 36 39
programa_minipar     : 0
receive_stmt         : 26
send_stmt            : 27
stmt                 : 6 7
stmts                : 4 5 7 30 31 39 70 71 71
tipo_var             : 13 14
while_stmt           : 21

Parsing method: LALR

state 0

    (0) S' -> . programa_minipar
    (1) programa_minipar -> . bloco_stmt
    (2) bloco_stmt -> . bloco_SEQ
    (3) bloco_stmt -> . bloco_PAR
    (4) bloco_SEQ -> . SEQ LBRACE stmts RBRACE
    (5) bloco_PAR -> . PAR LBRACE stmts RBRACE

    SEQ             shift and go to state 5
    PAR             shift and go to state 6

    programa_minipar               shift and go to state 1
    bloco_stmt                     shift and go to state 2
    bloco_SEQ                      shift and go to state 3
    bloco_PAR                      shift and go to state 4

state 1

    (0) S' -> programa_minipar .



state 2

    (1) programa_minipar -> bloco_stmt .

    $end            reduce using rule 1 (programa_minipar -> bloco_stmt .)


state 3

    (2) bloco_stmt -> bloco_SEQ .

    $end            reduce using rule 2 (bloco_stmt -> bloco_SEQ .)


state 4

    (3) bloco_stmt -> bloco_PAR .

    $end            reduce using rule 3 (bloco_stmt -> bloco_PAR .)


state 5

    (4) bloco_SEQ -> SEQ . LBRACE stmts RBRACE

    LBRACE          shift and go to state 7


state 6

    (5) bloco_PAR -> PAR . LBRACE stmts RBRACE

    LBRACE          shift and go to state 8


state 7

    (4) bloco_SEQ -> SEQ LBRACE . stmts RBRACE
    (6) stmts -> . stmt
    (7) stmts -> . stmt stmts
    (17) stmt -> . declaracao SEMICOLON
    (18) stmt -> . atribuicao SEMICOLON
    (19) stmt -> . if_stmt
    (20) stmt -> . for_stmt
    (21) stmt -> . while_stmt
    (22) stmt -> . def_funcao
    (23) stmt -> . input SEMICOLON
    (24) stmt -> . output SEMICOLON
    (25) stmt -> . chamada_funcao SEMICOLON
    (26) stmt -> . receive_stmt
    (27) stmt -> . send_stmt
    (28) stmt -> . RETURN expr SEMICOLON
    (29) stmt -> . COMMENT
    (14) declaracao -> . tipo_var ID ASSIGN expr
    (15) declaracao -> . C_CHANNEL ASSIGN ID STRING NUM SEMICOLON
    (16) atribuicao -> . ID ASSIGN expr
    (70) if_stmt -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE
    (71) if_stmt -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
    (30) for_stmt -> . FOR LPAREN ID IN expr RPAREN LBRACE stmts RBRACE
    (31) while_stmt -> . WHILE LPAREN expr RPAREN LBRACE stmts RBRACE
    (39) def_funcao -> . DEF ID LPAREN params RPAREN LBRACE stmts RBRACE
    (32) input -> . INPUT LPAREN args RPAREN
    (33) output -> . OUTPUT LPAREN args RPAREN
    (42) chamada_funcao -> . ID LPAREN args RPAREN
    (34) receive_stmt -> . ID DOT RECEIVE COLON expr SEMICOLON
    (35) send_stmt -> . ID DOT SEND COLON expr SEMICOLON
    (8) tipo_var -> . BOOL
    (9) tipo_var -> . INT
    (10) tipo_var -> . FLOAT_TYPE
    (11) tipo_var -> . STRING_TYPE
    (12) tipo_var -> . C_CHANNEL
    (13) tipo_var -> . LIST LT tipo_var GT

    RETURN          shift and go to state 22
    COMMENT         shift and go to state 23
    C_CHANNEL       shift and go to state 26
    ID              shift and go to state 25
    IF              shift and go to state 27
    FOR             shift and go to state 28
    WHILE           shift and go to state 29
    DEF             shift and go to state 30
    INPUT           shift and go to state 31
    OUTPUT          shift and go to state 32
    BOOL            shift and go to state 33
    INT             shift and go to state 34
    FLOAT_TYPE      shift and go to state 35
    STRING_TYPE     shift and go to state 36
    LIST            shift and go to state 37

    stmts                          shift and go to state 9
    stmt                           shift and go to state 10
    declaracao                     shift and go to state 11
    atribuicao                     shift and go to state 12
    if_stmt                        shift and go to state 13
    for_stmt                       shift and go to state 14
    while_stmt                     shift and go to state 15
    def_funcao                     shift and go to state 16
    input                          shift and go to state 17
    output                         shift and go to state 18
    chamada_funcao                 shift and go to state 19
    receive_stmt                   shift and go to state 20
    send_stmt                      shift and go to state 21
    tipo_var                       shift and go to state 24

state 8

    (5) bloco_PAR -> PAR LBRACE . stmts RBRACE
    (6) stmts -> . stmt
    (7) stmts -> . stmt stmts
    (17) stmt -> . declaracao SEMICOLON
    (18) stmt -> . atribuicao SEMICOLON
    (19) stmt -> . if_stmt
    (20) stmt -> . for_stmt
    (21) stmt -> . while_stmt
    (22) stmt -> . def_funcao
    (23) stmt -> . input SEMICOLON
    (24) stmt -> . output SEMICOLON
    (25) stmt -> . chamada_funcao SEMICOLON
    (26) stmt -> . receive_stmt
    (27) stmt -> . send_stmt
    (28) stmt -> . RETURN expr SEMICOLON
    (29) stmt -> . COMMENT
    (14) declaracao -> . tipo_var ID ASSIGN expr
    (15) declaracao -> . C_CHANNEL ASSIGN ID STRING NUM SEMICOLON
    (16) atribuicao -> . ID ASSIGN expr
    (70) if_stmt -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE
    (71) if_stmt -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
    (30) for_stmt -> . FOR LPAREN ID IN expr RPAREN LBRACE stmts RBRACE
    (31) while_stmt -> . WHILE LPAREN expr RPAREN LBRACE stmts RBRACE
    (39) def_funcao -> . DEF ID LPAREN params RPAREN LBRACE stmts RBRACE
    (32) input -> . INPUT LPAREN args RPAREN
    (33) output -> . OUTPUT LPAREN args RPAREN
    (42) chamada_funcao -> . ID LPAREN args RPAREN
    (34) receive_stmt -> . ID DOT RECEIVE COLON expr SEMICOLON
    (35) send_stmt -> . ID DOT SEND COLON expr SEMICOLON
    (8) tipo_var -> . BOOL
    (9) tipo_var -> . INT
    (10) tipo_var -> . FLOAT_TYPE
    (11) tipo_var -> . STRING_TYPE
    (12) tipo_var -> . C_CHANNEL
    (13) tipo_var -> . LIST LT tipo_var GT

    RETURN          shift and go to state 22
    COMMENT         shift and go to state 23
    C_CHANNEL       shift and go to state 26
    ID              shift and go to state 25
    IF              shift and go to state 27
    FOR             shift and go to state 28
    WHILE           shift and go to state 29
    DEF             shift and go to state 30
    INPUT           shift and go to state 31
    OUTPUT          shift and go to state 32
    BOOL            shift and go to state 33
    INT             shift and go to state 34
    FLOAT_TYPE      shift and go to state 35
    STRING_TYPE     shift and go to state 36
    LIST            shift and go to state 37

    stmts                          shift and go to state 38
    stmt                           shift and go to state 10
    declaracao                     shift and go to state 11
    atribuicao                     shift and go to state 12
    if_stmt                        shift and go to state 13
    for_stmt                       shift and go to state 14
    while_stmt                     shift and go to state 15
    def_funcao                     shift and go to state 16
    input                          shift and go to state 17
    output                         shift and go to state 18
    chamada_funcao                 shift and go to state 19
    receive_stmt                   shift and go to state 20
    send_stmt                      shift and go to state 21
    tipo_var                       shift and go to state 24

state 9

    (4) bloco_SEQ -> SEQ LBRACE stmts . RBRACE

    RBRACE          shift and go to state 39


state 10

    (6) stmts -> stmt .
    (7) stmts -> stmt . stmts
    (6) stmts -> . stmt
    (7) stmts -> . stmt stmts
    (17) stmt -> . declaracao SEMICOLON
    (18) stmt -> . atribuicao SEMICOLON
    (19) stmt -> . if_stmt
    (20) stmt -> . for_stmt
    (21) stmt -> . while_stmt
    (22) stmt -> . def_funcao
    (23) stmt -> . input SEMICOLON
    (24) stmt -> . output SEMICOLON
    (25) stmt -> . chamada_funcao SEMICOLON
    (26) stmt -> . receive_stmt
    (27) stmt -> . send_stmt
    (28) stmt -> . RETURN expr SEMICOLON
    (29) stmt -> . COMMENT
    (14) declaracao -> . tipo_var ID ASSIGN expr
    (15) declaracao -> . C_CHANNEL ASSIGN ID STRING NUM SEMICOLON
    (16) atribuicao -> . ID ASSIGN expr
    (70) if_stmt -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE
    (71) if_stmt -> . IF LPAREN expr RPAREN LBRACE stmts RBRACE ELSE LBRACE stmts RBRACE
    (30) for_stmt -> . FOR LPAREN ID IN expr RPAREN LBRACE stmts RBRACE
    (31) while_stmt -> . WHILE LPAREN expr RPAREN LBRACE stmts RBRACE
    (39) def_funcao -> . DEF ID LPAREN params RPAREN LBRACE stmts RBRACE
    (32) input -> . INPUT LPAREN args RPAREN
    (33) output -> . OUTPUT LPAREN args RPAREN
    (42) chamada_funcao -> . ID LPAREN args RPAREN
    (34) receive_stmt -> . ID DOT RECEIVE COLON expr SEMICOLON
    (35) send_stmt -> . ID DOT SEND COLON expr SEMICOLON
    (8) tipo_var -> . BOOL
    (9) tipo_var -> . INT
    (10) tipo_var -> . FLOAT_TYPE
    (11) tipo_var -> . STRING_TYPE
    (12) tipo_var -> . C_CHANNEL
    (13) tipo_var -> . LIST LT tipo_var GT

    RBRACE          reduce using rule 6 (stmts -> stmt .)
    RETURN          shift and go to state 22
    COMMENT         shift and go to state 23
    C_CHANNEL       shift and go to state 26
    ID              shift and go to state 25
    IF              shift and go to state 27
    FOR             shift and go to state 28
    WHILE           shift and go to state 29
    DEF             shift and go to state 30
    INPUT           shift and go to state 31
    OUTPUT          shift and go to state 32
    BOOL            shift and go to state 33
    INT             shift and go to state 34
    FLOAT_TYPE      shift and go to state 35
    STRING_TYPE     shift and go to state 36
    LIST            shift and go to state 37

    stmt                           shift and go to state 10
    stmts                          shift and go to state 40
    declaracao                     shift and go to state 11
    atribuicao                     shift and go to state 12
    if_stmt                        shift and go to state 13
    for_stmt                       shift and go to state 14
    while_stmt                     shift and go to state 15
    def_funcao                     shift and go to state 16
    input                          shift and go to state 17
    output                         shift and go to state 18
    chamada_funcao                 shift and go to state 19
    receive_stmt                   shift and go to state 20
    send_stmt                      shift and go to state 21
    tipo_var                       shift and go to state 24

state 11

    (17) stmt -> declaracao . SEMICOLON

    SEMICOLON       shift and go to state 41


state 12

    (18) stmt -> atribuicao . SEMICOLON

    SEMICOLON       shift and go to state 42


state 13

    (19) stmt -> if_stmt .

    RETURN          reduce using rule 19 (stmt -> if_stmt .)
    COMMENT         reduce using rule 19 (stmt -> if_stmt .)
    C_CHANNEL       reduce using rule 19 (stmt -> if_stmt .)
    ID              reduce using rule 19 (stmt -> if_stmt .)
    IF              reduce using rule 19 (stmt -> if_stmt .)
    FOR             reduce using rule 19 (stmt -> if_stmt .)
    WHILE           reduce using rule 19 (stmt -> if_stmt .)
    DEF             reduce using rule 19 (stmt -> if_stmt .)
    INPUT           reduce using rule 19 (stmt -> if_stmt .)
    OUTPUT          reduce using rule 19 (stmt -> if_stmt .)
    BOOL            reduce using rule 19 (stmt -> if_stmt .)
    INT             reduce using rule 19 (stmt -> if_stmt .)
    FLOAT_TYPE      reduce using rule 19 (stmt -> if_stmt .)
    STRING_TYPE     reduce using rule 19 (stmt -> if_stmt .)
    LIST            reduce using rule 19 (stmt -> if_stmt .)
    RBRACE          reduce using rule 19 (stmt -> if_stmt .)


state 14

    (20) stmt -> for_stmt .

    RETURN          reduce using rule 20 (stmt -> for_stmt .)
    COMMENT         reduce using rule 20 (stmt -> for_stmt .)
    C_CHANNEL       reduce using rule 20 (stmt -> for_stmt .)
    ID              reduce using rule 20 (stmt -> for_stmt .)
    IF              reduce using rule 20 (stmt -> for_stmt .)
    FOR             reduce using rule 20 (stmt -> for_stmt .)
    WHILE           reduce using rule 20 (stmt -> for_stmt .)
    DEF             reduce using rule 20 (stmt -> for_stmt .)
    INPUT           reduce using rule 20 (stmt -> for_stmt .)
    OUTPUT          reduce using rule 20 (stmt -> for_stmt .)
    BOOL            reduce using rule 20 (stmt -> for_stmt .)
    INT             reduce using rule 20 (stmt -> for_stmt .)
    FLOAT_TYPE      reduce using rule 20 (stmt -> for_stmt .)
    STRING_TYPE     reduce using rule 20 (stmt -> for_stmt .)
    LIST            reduce using rule 20 (stmt -> for_stmt .)
    RBRACE          reduce using rule 20 (stmt -> for_stmt .)


state 15

    (21) stmt -> while_stmt .

    RETURN          reduce using rule 21 (stmt -> while_stmt .)
    COMMENT         reduce using rule 21 (stmt -> while_stmt .)
    C_CHANNEL       reduce using rule 21 (stmt -> while_stmt .)
    ID              reduce using rule 21 (stmt -> while_stmt .)
    IF              reduce using rule 21 (stmt -> while_stmt .)
    FOR             reduce using rule 21 (stmt -> while_stmt .)
    WHILE           reduce using rule 21 (stmt -> while_stmt .)
    DEF             reduce using rule 21 (stmt -> while_stmt .)
    INPUT           reduce using rule 21 (stmt -> while_stmt .)
    OUTPUT          reduce using rule 21 (stmt -> while_stmt .)
    BOOL            reduce using rule 21 (stmt -> while_stmt .)
    INT             reduce using rule 21 (stmt -> while_stmt .)
    FLOAT_TYPE      reduce using rule 21 (stmt -> while_stmt .)
    STRING_TYPE     reduce using rule 21 (stmt -> while_stmt .)
    LIST            reduce using rule 21 (stmt -> while_stmt .)
    RBRACE          reduce using rule 21 (stmt -> while_stmt .)


state 16

    (22) stmt -> def_funcao .

    RETURN          reduce using rule 22 (stmt -> def_funcao .)
    COMMENT         reduce using rule 22 (stmt -> def_funcao .)
    C_CHANNEL       reduce using rule 22 (stmt -> def_funcao .)
    ID              reduce using rule 22 (stmt -> def_funcao .)
    IF              reduce using rule 22 (stmt -> def_funcao .)
    FOR             reduce using rule 22 (stmt -> def_funcao .)
    WHILE           reduce using rule 22 (stmt -> def_funcao .)
    DEF             reduce using rule 22 (stmt -> def_funcao .)
    INPUT           reduce using rule 22 (stmt -> def_funcao .)
    OUTPUT          reduce using rule 22 (stmt -> def_funcao .)
    BOOL            reduce using rule 22 (stmt -> def_funcao .)
    INT             reduce using rule 22 (stmt -> def_funcao .)
    FLOAT_TYPE      reduce using rule 22 (stmt -> def_funcao .)
    STRING_TYPE     reduce using rule 22 (stmt -> def_funcao .)
    LIST            reduce using rule 22 (stmt -> def_funcao .)
    RBRACE          reduce using rule 22 (stmt -> def_funcao .)


state 17

    (23) stmt -> input . SEMICOLON

    SEMICOLON       shift and go to state 43


state 18

    (24) stmt -> output . SEMICOLON

    SEMICOLON       shift and go to state 44


state 19

    (25) stmt -> chamada_funcao . SEMICOLON

    SEMICOLON       shift and go to state 45


state 20

    (26) stmt -> receive_stmt .

    RETURN          reduce using rule 26 (stmt -> receive_stmt .)
    COMMENT         reduce using rule 26 (stmt -> receive_stmt .)
    C_CHANNEL       reduce using rule 26 (stmt -> receive_stmt .)
    ID              reduce using rule 26 (stmt -> receive_stmt .)
    IF              reduce using rule 26 (stmt -> receive_stmt .)
    FOR             reduce using rule 26 (stmt -> receive_stmt .)
    WHILE           reduce using rule 26 (stmt -> receive_stmt .)
    DEF             reduce using rule 26 (stmt -> receive_stmt .)
    INPUT           reduce using rule 26 (stmt -> receive_stmt .)
    OUTPUT          reduce using rule 26 (stmt -> receive_stmt .)
    BOOL            reduce using rule 26 (stmt -> receive_stmt .)
    INT             reduce using rule 26 (stmt -> receive_stmt .)
    FLOAT_TYPE      reduce using rule 26 (stmt -> receive_stmt .)
    STRING_TYPE     reduce using rule 26 (stmt -> receive_stmt .)
    LIST            reduce using rule 26 (stmt -> receive_stmt .)
    RBRACE          reduce using rule 26 (stmt -> receive_stmt .)


state 21

    (27) stmt -> send_stmt .

    RETURN          reduce using rule 27 (stmt -> send_stmt .)
    COMMENT         reduce using rule 27 (stmt -> send_stmt .)
    C_CHANNEL       reduce using rule 27 (stmt -> send_stmt .)
    ID              reduce using rule 27 (stmt -> send_stmt .)
    IF              reduce using rule 27 (stmt -> send_stmt .)
    FOR             reduce using rule 27 (stmt -> send_stmt .)
    WHILE           reduce using rule 27 (stmt -> send_stmt .)
    DEF             reduce using rule 27 (stmt -> send_stmt .)
    INPUT           reduce using rule 27 (stmt -> send_stmt .)
    OUTPUT          reduce using rule 27 (stmt -> send_stmt .)
    BOOL            reduce using rule 27 (stmt -> send_stmt .)
    INT             reduce using rule 27 (stmt -> send_stmt .)
    FLOAT_TYPE      reduce using rule 27 (stmt -> send_stmt .)
    STRING_TYPE     reduce using rule 27 (stmt -> send_stmt .)
    LIST            reduce using rule 27 (stmt -> send_stmt .)
    RBRACE          reduce using rule 27 (stmt -> send_stmt .)


state 22
